--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
-GameInstanceClass=/Script/HelloUnreal.MyGameInstance
 EditorStartupMap=None
+GameInstanceClass=/Script/UnrealString.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/HelloUnreal")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/HelloUnreal")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealString")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealString")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=866A8EFB436B865E592B938B7CFB24E8
+SecurityToken=8D8B72444E8E654A1784EABAB2BDECBA
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
