5-6강 : 리플렉션 시스템

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/UnrealString.MyGameInstance
+GameInstanceClass=/Script/UnrealReflection.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealString")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealString")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealReflection")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealReflection")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=8D8B72444E8E654A1784EABAB2BDECBA
+SecurityToken=443B969142A07CA550C994961BA90A07
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
