7강 : C++ 설계 I - 인터페이스

--- a/UnrealInterface2.uproject
+++ b/UnrealInterface2.uproject
@@ -5,11 +5,10 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealReflection",
+			"Name": "UnrealInterface2",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine",
 				"CoreUObject"
 			]
 		}
