8강 : C++ 설계 II - 컴포지션

--- a/UnrealComposition.uproject
+++ b/UnrealComposition.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealInterface2",
+			"Name": "UnrealComposition",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
