9강 : C++ 설계 III - 델리게이트

--- a/UnrealDelegate.uproject
+++ b/UnrealDelegate.uproject
@@ -5,7 +5,7 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealComposition",
+			"Name": "UnrealDelegate",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
