--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/UnrealComposition.MyGameInstance
+GameInstanceClass=/Script/UnrealDelegate.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealComposition")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealComposition")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealDelegate")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealDelegate")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=E828185842E47CF781E5C980A5D32784
+SecurityToken=B0B95EC242069258EFC9A08F55D53920
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
