10-11강 : 컨테이너 라이브러리 (TArray, TSet, TMap)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/UnrealDelegate.MyGameInstance
+GameInstanceClass=/Script/UnrealContainer.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealDelegate")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealDelegate")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealContainer")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealContainer")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=B0B95EC242069258EFC9A08F55D53920
+SecurityToken=C12AA355465045A423574CB04199F739
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
