--- a/UnrealContainer.uproject
+++ b/UnrealContainer.uproject
@@ -5,10 +5,11 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealDelegate",
+			"Name": "UnrealContainer",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
+				"Engine",
 				"CoreUObject"
 			]
 		}
