12강 : 언리얼 엔진 메모리 관리 (UObjectPtr, UPROPERTY)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/UnrealContainer.MyGameInstance
+GameInstanceClass=/Script/UnrealMemory.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealContainer")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealContainer")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealMemory")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealMemory")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=C12AA355465045A423574CB04199F739
+SecurityToken=0863122341826106ADDF419F54781776
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -91,4 +91,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/Engine.GarbageCollectionSettings]
+gc.TimeBetweenPurgingPendingKillObjects=3.000000
 
