--- a/UnrealMemory.uproject
+++ b/UnrealMemory.uproject
@@ -5,12 +5,12 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealContainer",
+			"Name": "UnrealMemory",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine",
-				"CoreUObject"
+				"CoreUObject",
+				"Engine"
 			]
 		}
 	],
