13강 : 언리얼 오브젝트 관리 I - 직렬화

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=None
 EditorStartupMap=None
-GameInstanceClass=/Script/UnrealMemory.MyGameInstance
+GameInstanceClass=/Script/UnrealSerialization.MyGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -75,13 +75,13 @@ FontDPIPreset=Standard
 FontDPI=72
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealMemory")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealMemory")
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/UnrealSerialization")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealSerialization")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=0863122341826106ADDF419F54781776
+SecurityToken=314841284D5437D9731734AB5474C143
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
@@ -91,7 +91,4 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
-
-[/Script/Engine.GarbageCollectionSettings]
-gc.TimeBetweenPurgingPendingKillObjects=3.000000
 
