14-15강 : 언리얼 빌드 시스템

--- a/UnrealBuildSystem.uproject
+++ b/UnrealBuildSystem.uproject
@@ -5,21 +5,11 @@
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "UnrealSerialization",
+			"Name": "UnrealBuildSystem",
 			"Type": "Runtime",
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
-				"Engine",
 				"CoreUObject"
-			]
-		}
-	],
-	"Plugins": [
-		{
-			"Name": "ModelingToolsEditorMode",
-			"Enabled": true,
-			"TargetAllowList": [
-				"Editor"
 			]
 		}
 	]
